[package]
authors = ["Johannes Becker <j.becker@famedly.com>"]
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio", "appservice"]
license = "Apache-2.0"
name = "matrix-sdk-appservice"
version = "0.1.0"

[features]
default = ["warp", "native-tls"]

encryption = ["matrix-sdk/encryption"]
sled_state_store = ["matrix-sdk/sled_state_store"]
sled_cryptostore = ["matrix-sdk/sled_cryptostore"]
markdown = ["matrix-sdk/markdown"]
native-tls = ["matrix-sdk/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls"]
socks = ["matrix-sdk/socks"]
sso_login = ["matrix-sdk/sso_login"]
require_auth_for_profile_requests = ["matrix-sdk/require_auth_for_profile_requests"]

docs = ["warp"]

[dependencies]
dashmap = "4"
futures = "0.3"
futures-util = "0.3"
http = "0.2"
regex = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"
url = "2"
warp = { git = "https://github.com/seanmonstar/warp.git", rev = "629405", optional = true, default-features = false }

matrix-sdk = { version = "0.3", path = "../matrix_sdk", default-features = false, features = ["appservice"] }

[dependencies.ruma]
version = "0.3.0"
features = ["client-api-c", "appservice-api-s", "unstable-pre-spec"]

[dev-dependencies]
env_logger = "0.8"
mockito = "0.30"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2"

matrix-sdk-test = { version = "0.3", path = "../matrix_sdk_test", features = ["appservice"] }

[[example]]
name = "appservice_autojoin"
required-features = ["warp"]
