[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "The base component to build a Matrix client library."
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-base"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = []
encryption = ["matrix-sdk-crypto"]
sled_state_store = ["sled", "pbkdf2", "hmac", "sha2", "rand", "chacha20poly1305"]
sled_cryptostore = ["matrix-sdk-crypto/sled_cryptostore"]
unstable-synapse-quirks = ["matrix-sdk-common/unstable-synapse-quirks"]
markdown = ["matrix-sdk-common/markdown"]

docs = ["encryption", "sled_cryptostore"]

[dependencies]
dashmap= "4.0.1"
serde = { version = "1.0.119", features = ["rc"] }
serde_json = "1.0.61"
tracing = "0.1.22"

matrix-sdk-common = { version = "0.2.0", path = "../matrix_sdk_common" }
matrix-sdk-crypto = { version = "0.2.0", path = "../matrix_sdk_crypto", optional = true }

# Misc dependencies
thiserror = "1.0.23"
futures = "0.3.8"
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }

# Deps for the sled state store
sled = { version = "0.34.6", optional = true }
chacha20poly1305 = { version = "0.7.1", optional = true }
pbkdf2 = { version = "0.6.0", default-features = false, optional = true }
hmac = { version = "0.10.1", optional = true }
sha2 = { version = "0.9.2", optional = true }
rand = { version = "0.8.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.0.1"
default-features = false
features = ["sync", "fs"]

[dev-dependencies]
matrix-sdk-test = { version = "0.2.0", path = "../matrix_sdk_test" }
http = "0.2.2"
tracing-subscriber = "0.2.15"
tempfile = "3.1.0"
mockito = "0.28.0"
rustyline = "7.0.0"
rustyline-derive = "0.4.0"
atty = "0.2"
clap = "2.33.3"
syntect = "4.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.0.1", default-features = false, features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.19"
