[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Collection of common types and imports used in the matrix-sdk"
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-common"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.2.0"

[features]
markdown = ["ruma/markdown"]

[dependencies]
instant = { version = "0.1.9", features = ["wasm-bindgen", "now"] }
serde = "1.0.122"
async-trait = "0.1.42"

[dependencies.ruma]
version = "0.0.3"
git = "https://github.com/ruma/ruma"
rev = "1e005f576e4640ee5ce6e357bcf33293819502d1"
features = ["client-api-c", "compat", "unstable-pre-spec"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "0.8.2", default-features = false, features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "1.1.0"
default-features = false
features = ["sync"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.12"
futures-locks = { version = "0.6.0", default-features = false }
wasm-bindgen-futures = "0.4"
uuid = { version = "0.8.2", default-features = false, features = ["v4", "wasm-bindgen"] }
