[package]
description = "Helper macros for the Matrix SDK"
authors = ["MTRnord <mtrnord1@gmail.com>"]
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "Apache-2.0"
name = "matrix-sdk-common-macros"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
