[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
description = "Matrix encryption library"
edition = "2018"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-crypto"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
default = []
sqlite_cryptostore = ["sqlx"]
sled_cryptostore = ["sled"]
docs = ["sqlite_cryptostore"]

[dependencies]
matrix-sdk-common = { version = "0.2.0", path = "../matrix_sdk_common" }

olm-rs = { version = "1.0.0", features = ["serde"] }
getrandom = "0.2.1"
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_json = "1.0.61"
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }

# Misc dependencies
sled = { version = "0.34.6", optional = true }
thiserror = "1.0.23"
tracing = "0.1.22"
atomic = "0.5.0"
dashmap = "4.0.1"
sha2 = "0.9.2"
aes-gcm = "0.8.0"
aes-ctr = "0.6.0"
pbkdf2 = { version = "0.6.0", default-features = false }
hmac = "0.10.1"
base64 = "0.13.0"
byteorder = "1.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sqlx]
version = "0.4.2"
optional = true
default-features = false
features = ["runtime-tokio-native-tls", "sqlite", "macros"]

[dev-dependencies]
tokio = { version = "1.0.1", default-features = false, features = ["rt-multi-thread", "macros"] }
futures = "0.3.8"
proptest = "0.10.1"
serde_json = "1.0.61"
tempfile = "3.1.0"
http = "0.2.2"
matrix-sdk-test = { version = "0.2.0", path = "../matrix_sdk_test" }
indoc = "1.0.3"
