[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[package.metadata.release]
release = false

[[bin]]
name = "xtask"
test = false

[dependencies]
camino = { version = "1.2.2", default-features = false, features = ["serde1"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
fs_extra = "1"
indexmap.workspace = true
lazy_static = "1.5.0"
regex = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uniffi_bindgen.workspace = true
url.workspace = true
xshell = "0.2.2"
