[package]
name = "matrix-sdk-ffi"
version = "0.12.0"
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk"
keywords = ["matrix", "chat", "messaging", "ffi"]
license = "Apache-2.0"
readme = "README.md"
rust-version.workspace = true
repository = "https://github.com/matrix-org/matrix-rust-sdk"
publish = false

[package.metadata.release]
release = true

[lib]
crate-type = [
  # Needed by uniffi for Android bindings
  "cdylib",
  # Needed by uniffi for iOS bindings
  "staticlib",
  # Needed by uniffi for JS/Wasm bindings, which use rust as an intermediate language
  "lib"
]

[features]
default = ["bundled-sqlite", "unstable-msc4274"]
bundled-sqlite = ["matrix-sdk/bundled-sqlite"]
unstable-msc4274 = ["matrix-sdk-ui/unstable-msc4274"]
# Required when targeting a Javascript environment, like Wasm in a browser.
js = ["matrix-sdk-ui/js"]
# Use the TLS implementation provided by the host system, necessary on iOS and Wasm platforms.
native-tls = ["matrix-sdk/native-tls", "sentry?/native-tls"]
# Use Rustls as the TLS implementation, necessary on Android platforms.
rustls-tls = ["matrix-sdk/rustls-tls", "sentry?/rustls"]
# Enable sentry error monitoring, not compatible with Wasm platforms.
sentry = ["dep:sentry", "dep:sentry-tracing"]

[dependencies]
anyhow.workspace = true
as_variant.workspace = true
extension-trait = "1.0.1"
eyeball-im.workspace = true
futures-util.workspace = true
language-tags = "0.3.2"
log-panics = { version = "2", features = ["with-backtrace"] }
matrix-sdk = { workspace = true, features = [
    "anyhow",
    "e2e-encryption",
    "experimental-widgets",
    "markdown",
    "socks",
    "sqlite",
    "uniffi",
] }
matrix-sdk-common.workspace = true
matrix-sdk-ffi-macros.workspace = true
matrix-sdk-ui = { workspace = true, features = ["uniffi"] }
mime = "0.3.16"
once_cell.workspace = true
ruma = { workspace = true, features = ["html", "unstable-unspecified", "unstable-msc3488", "compat-unset-avatar", "unstable-msc3245-v1-compat", "unstable-msc4278"] }
serde.workspace = true
serde_json.workspace = true
sentry = { version = "0.36.0", optional = true, default-features = false, features = [
  # Most default features enabled otherwise.
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "sentry-debug-images",
] }
sentry-tracing = { version = "0.36.0", optional = true }
thiserror.workspace = true
tracing.workspace = true
tracing-appender = { version = "0.2.2" }
tracing-core.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
uuid = { version = "1.4.1", features = ["v4"] }
zeroize.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
uniffi.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-compat.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uniffi = { workspace = true, features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2.1"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
vergen = { version = "8.1.3", features = ["build", "git", "gitcl"] }

[lints]
workspace = true
